--- a/spiderverse/package.json
+++ b/spiderverse/package.json
@@ -4,7 +4,8 @@
   "description": "\"test_driven_development\"",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest",
+    "start": "node index.js"
   },
   "author": "Einar Davalos",
   "license": "ISC",
